added enum for window names